Reunião com o Hugo

--- a/av-geo.html
+++ b/av-geo.html
@@ -100,7 +100,7 @@
                 hierarquização de acessos a serem definidos oportunamente pelo cliente e AVSystemGeo. </p>
                 
         </div>
-        <button class="btn btn-outline-light botao-2"><a class="maoe" id="vemcor" href="https://sistema.avsystemgeo.com.br/avgeo/#">Acesse nosso Sistema!</a></button>
+        <button class="btn btn-outline-light botao"><a class="maoe" id="vemcor" href="https://sistema.avsystemgeo.com.br/avgeo/#">Acesse nosso Sistema!</a></button>
     </div>
     
     <!--
