--- a/contato.html
+++ b/contato.html
@@ -117,7 +117,7 @@
               </div>
           <div>
           
-            <button  type="submit" class="btn btn-outline botao-2" ><a class="maoe" href="mailto:comercial@avsystemgeo.com.br, suporte@avsystemgeo.com.br,?subject=Assunto&body=Boa tarde," ><span style="color: rgb(0, 0, 0);">Enviar</span></a></button>
+            <button  type="submit" class="btn btn-outline botao" ><a class="maoe" href="mailto:comercial@avsystemgeo.com.br, suporte@avsystemgeo.com.br,?subject=Assunto&body=Boa tarde," >Enviar</a></button>
         </div>
    
              </form>
