--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 		<section class="container-tecnologias">
 			<div class="container">
 				<h2 class="slider-clientes">Tecnologias</h2>
-				<section class="customer-logos slider">
+				<section class="customer-logos slider tecnologias">
 					<div class="slide"><img src="./imgs/tecnologias/1.png"></div>
 					<div class="slide"><img src="./imgs/tecnologias/2.png"></div>
 					<div class="slide"><img src="./imgs/tecnologias/3.png"></div>
@@ -276,7 +276,7 @@
 		<section class="container-clientes">
 			<div class="container">
 				<h2 class="slider-clientes" id="clientes">Clientes</h2>
-				<section class="customer-logos slider">
+				<section class="customer-logos slider clientes">
 					<div class="slide"><img src="./imgs/clientes/clientes01.jpg"></div>
 					<div class="slide"><img src="./imgs/clientes/clientes02.jpg"></div>
 					<div class="slide"><img src="./imgs/clientes/clientes03.jpg"></div>
