--- a/trabalhe-conosco.html
+++ b/trabalhe-conosco.html
@@ -181,7 +181,7 @@
                     <tr><td> <label> Anexo de Curriculo (Opcional): </label></td> 
                         <td> <input  type = "file" id ="anexar" name="anexar"></td> <br/><br/>  </tr>
                     </tr>
-                    <button  type="submit" class="botao-2" ><a class="maoe" href="mailto:rh@avsystemgeo.com.br?subject=Assunto&body=Boa tarde, Gostaria de enviar meus dados para serem avaliados para uma achance de emprego na AVSystemGEO" ><span style="color: rgb(0, 0, 0);">Enviar</span></a></button>
+                    <button  type="submit" class="botao" ><a class="maoe" href="mailto:rh@avsystemgeo.com.br?subject=Assunto&body=Boa tarde, Gostaria de enviar meus dados para serem avaliados para uma achance de emprego na AVSystemGEO" >Enviar</a></button>
     
 
 
