--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
 	<script src="./scripts/script.js"></script>
 	<script src="./scripts/avtron.js"></script>
 	<script src="./scripts/chat.js"></script>
-	<script src="./asdsd.js"></script>
+	<script src="./scripts/Politica_priv.js"></script>
 
 
 </body>
