Alteração do slide tech e clientes

--- a/index.html
+++ b/index.html
@@ -260,18 +260,20 @@
 			<div class="container">
 				<h2 class="slider-clientes">Tecnologias</h2>
 				<section class="customer-logos slider tecnologias">
-					<div class="slide"><img src="./imgs/tecnologias/1.png"></div>
-					<div class="slide"><img src="./imgs/tecnologias/2.png"></div>
-					<div class="slide"><img src="./imgs/tecnologias/3.png"></div>
-					<div class="slide"><img src="./imgs/tecnologias/teste.png"></div>
-					<div class="slide"><img src="./imgs/tecnologias/5.png"></div>
-					<div class="slide"><img src="./imgs/tecnologias/6.png"></div>
-					<div class="slide"><img src="./imgs/tecnologias/7.png"></div>
-					<div class="slide"><img src="./imgs/tecnologias/MCSA_logo.png"></div>
-					<div class="slide"><img src="./imgs/tecnologias/9.png"></div>
-					<div class="slide"><img src="./imgs/tecnologias/10.png"></div>
-					<div class="slide"><img src="./imgs/tecnologias/github.png"></div>
-					
+					<div class="slide"><img src="./imgs/tecnologias/tecnologia1.png"></div>
+					<div class="slide"><img src="./imgs/tecnologias/tecnologia2.png"></div>
+					<div class="slide"><img src="./imgs/tecnologias/tecnologia3.png"></div>
+					<div class="slide"><img src="./imgs/tecnologias/tecnologia4.png"></div>
+					<div class="slide"><img src="./imgs/tecnologias/tecnologia5.png"></div>
+					<div class="slide"><img src="./imgs/tecnologias/tecnologia6.png"></div>
+					<div class="slide"><img src="./imgs/tecnologias/tecnologia7.png"></div>
+					<div class="slide"><img src="./imgs/tecnologias/tecnologia8.png"></div>
+					<div class="slide"><img src="./imgs/tecnologias/tecnologia9.png"></div>
+					<div class="slide"><img src="./imgs/tecnologias/tecnologia10.png"></div>
+					<div class="slide"><img src="./imgs/tecnologias/tecnologia11.png"></div>
+					<div class="slide"><img src="./imgs/tecnologias/tecnologia12.png"></div>
+					<div class="slide"><img src="./imgs/tecnologias/tecnologia13.png"></div>
+					<div class="slide"><img src="./imgs/tecnologias/git.png"></div>
 				</section>
 				
 			</div>
