--- a/cases.html
+++ b/cases.html
@@ -69,8 +69,8 @@
 <!-- texto -->
 <div class="espacamento container-fluid">
 
-    <h1 id="fonte-texto">CASES</h1>
-    <h6>Veja alguns cases de trabalhos que desenvolvemos.</h6>
+    <h1 class="fonte-texto">CASES</h1>
+    <h6 >Veja alguns cases de trabalhos que desenvolvemos.</h6>
 
 </div>
 
