--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-	<body class="hero-anime">
+	<body>
 		<!--BOT-->
 		<button class="chatbox-open">
 			<div class="robo-container">
@@ -273,7 +273,7 @@
 					<div class="slide"><img src="./imgs/tecnologias/tecnologia11.png"></div>
 					<div class="slide"><img src="./imgs/tecnologias/tecnologia12.png"></div>
 					<div class="slide"><img src="./imgs/tecnologias/tecnologia13.png"></div>
-					<div class="slide"><img src="./imgs/tecnologias/git.png"></div>
+					<div class="slide"><img src="./imgs/tecnologias/tecnologia14.png"></div>
 				</section>
 				
 			</div>
