--- a/contato.html
+++ b/contato.html
@@ -77,12 +77,12 @@
 </div>
 
 <article>
-<section id="mapa">
-  <div class="mapWrapper">
+
+  <div class="mapWrapper mapa">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3751.128995402203!2d-43.930014585634!3d-19.918968243109028!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa699f38e957451%3A0x90a515e83c0cc8b!2sAVSystemGEO!5e0!3m2!1spt-BR!2sbr!4v1674576908009!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
-</section>
 
+  
 <section class="classe">
   <form id="form-contato" method="post" action="" onsubmit="return validF(0,'form-contato');">
     <!--<form  class='col-xs-10 col-sm-8 col-md-8 col-xs-offset-1 col-sm-offset-2 col-md-offset-2' name='StaticForm_59556ae7c299c' method='POST' action='/contato/save-form' enctype='multipart/form-data'>-->
@@ -117,14 +117,14 @@
               </div>
           <div>
           
-            <button  type="submit" class="btn btn-outline botao" ><a class="maoe" href="mailto:comercial@avsystemgeo.com.br, suporte@avsystemgeo.com.br,?subject=Assunto&body=Boa tarde," >Enviar</a></button>
+            <button  type="submit" class="btn btn-outline botao" ><a  href="mailto:comercial@avsystemgeo.com.br, suporte@avsystemgeo.com.br,?subject=Assunto&body=Boa tarde," >Enviar</a></button>
         </div>
    
              </form>
 </section>
 </article>
 
-<!--
+
 <footer>
   <div class="container1 footerContainer">
       <div class="footer-nav flex flex-around flex-start flex-g-1">
@@ -212,7 +212,7 @@
   </div>
 </footer>
 
--->
+
 
 
 
