--- a/trabalhe-conosco.html
+++ b/trabalhe-conosco.html
@@ -186,7 +186,7 @@
                     <tr><td> <label> Anexo de Curriculo (Opcional): </label></td> 
                         <td> <input  type = "file" id ="anexar" name="anexar"></td> <br/><br/>  </tr>
                     </tr>
-                    <button  type="submit" class="botao" ><a class="maoe" href="mailto:rh@avsystemgeo.com.br?subject=Assunto&body=Boa tarde, Gostaria de enviar meus dados para serem avaliados para uma achance de emprego na AVSystemGEO: " >Enviar</a></button>
+                    <button  type="submit" class="botao" ><a  href="mailto:rh@avsystemgeo.com.br?subject=Assunto&body=Boa tarde, Gostaria de enviar meus dados para serem avaliados para uma achance de emprego na AVSystemGEO: " >Enviar</a></button>
     
 
 
