--- a/index.html
+++ b/index.html
@@ -306,8 +306,7 @@
 							<img src="imgs/logo-avgeo.png" alt="" class="logo-footer">
 						</span>
 						<div class="social-medias flex flex-g-1">
-							<a href="https://instagram.com/avsystemgeo?igshid=YmMyMTA2M2Y="
-								class="social-media flex botao">
+							<a href="https://instagram.com/avsystemgeo?igshid=YmMyMTA2M2Y=" class="social-media flex botao">
 								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
 									class="bi bi-instagram" viewBox="0 0 16 16">
 									<path
@@ -320,11 +319,6 @@
 									<path
 										d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 10h-2v2h2v6h3v-6h1.82l.18-2h-2v-.833c0-.478.096-.667.558-.667h1.442v-2.5h-2.404c-1.798 0-2.596.792-2.596 2.308v1.692z" />
 								</svg>
-							</a>
-
-							<path
-								d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
-							</svg>
 							</a>
 
 							<a href="https://www.linkedin.com/company/avsystemgeo" class="social-media flex botao">
