--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 							<ul>
 								<li><a href="index.html#quem-somos">Quem somos</a></li>
 								<li><a href="contato.html">Contato</a></li>
-								<li><a href="index.html#clientes"</a></li>
+								<li><a href="index.html#clientes"></a></li>
 							
 							</ul>
 						</nav>
