alterações do dia 02/03/2023

--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
                 <div id="messages" aria-live="polite" aria-atomic="false" data-testid="messagesLog">
                     <div class="message message-operator  ">
                         <span class="message-content">Olá, como posso ajudar?</span>
+						<div class="background-content">
+						
+							   <div id="methodlearn">
+								  <button class="btn">Teste 1</button>
+								  <button class="btn">Teste 2</button>
+								  <button class="btn">Teste 3</button>
+								  <button class="btn">teste 4</button>
+								  <div class="content">Conteúdo 01</div>
+								  <div class="content">Conteúdo 02</div>
+								  <div class="content">Conteúdo 03</div>
+								  <div class="content">Conteúdo 04</div>
+							   </div>
+							</div>
                     </div>
                     <div class="message message-operator bots-quick-replies">
                         <div class="button-wrapper">
