--- a/index.html
+++ b/index.html
@@ -103,14 +103,19 @@
 										<a class="nav-link" href="av-geo.html">Sistemas</a>
 									</li>
 									<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 dropdown">
-									<a class="nav-link">Contato</a>
-									<ul class="dropdown-content">
-										<li><a href="contato.html">Contato</a></li>
-										<li><a href="trabalhe-conosco.html">Trabalhe Conosco</a></li>
-									</ul>
-								</li>
-									
-							</div>
+											<a class="nav-link">Contato</a>
+											<div class="dropdown-menu">
+												<div class="dropdown-content">
+													<a class="dropdown-item" href="contato.html">
+														Fale Conosco
+													</a>
+													<a class="dropdown-item" href="trabalhe-conosco.html">
+														Trabalhe Conosco
+													</a>
+												</div>
+											</div>
+									</li>
+								</ul>
 
 						</nav>
 					</div>
@@ -213,17 +218,17 @@
 						<h2 class="titulo-quem-somos">Valores</h2>
 						<div id="servicos-co-descricao">
 							<ul class="lista-valores lista">
-								<li class="roberto" id="palavra">Segurança da informação</li>
-								<li class="roberto" id="palavra">Integridade</li>
-								<li class="roberto" id="palavra">Pronto atendimento</li>
-								<li class="roberto" id="palavra">Otimização do tempo</li>
-								<li class="roberto" id="palavra">Unidade profissional</li>
-								<li class="roberto" id="palavra">Integridade</li>
-								<li class="roberto" id="palavra">Responsabilidade ambiental</li>
-								<li class="roberto" id="palavra">Disponibilidade</li>
-								<li class="roberto" id="palavra">Pronto atendimento</li>
-								<li class="roberto" id="palavra">Profissionalismo</li>
-								<li class="roberto" id="palavra">Equipe multidisciplinar</li>
+								<li class="icon-da-medalha" id="palavra">Segurança da informação</li>
+								<li class="icon-da-medalha" id="palavra">Integridade</li>
+								<li class="icon-da-medalha" id="palavra">Pronto atendimento</li>
+								<li class="icon-da-medalha" id="palavra">Otimização do tempo</li>
+								<li class="icon-da-medalha" id="palavra">Unidade profissional</li>
+								<li class="icon-da-medalha" id="palavra">Integridade</li>
+								<li class="icon-da-medalha" id="palavra">Responsabilidade ambiental</li>
+								<li class="icon-da-medalha" id="palavra">Disponibilidade</li>
+								<li class="icon-da-medalha" id="palavra">Pronto atendimento</li>
+								<li class="icon-da-medalha" id="palavra">Profissionalismo</li>
+								<li class="icon-da-medalha" id="palavra">Equipe multidisciplinar</li>
 							</ul>
 						</div>
 						
