--- a/trabalhe-conosco.html
+++ b/trabalhe-conosco.html
@@ -52,12 +52,18 @@
                                     <a class="nav-link" href="index.html">Sistemas</a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 dropdown active">
-									<a class="nav-link">Contato</a>
-									<ul class="dropdown-content">
-										<li><a href="contato.html">Contato</a></li>
-										<li><a href="trabalhe-conosco.html">Trabalhe Conosco</a></li>
-									  </ul>
-								</li>
+                                    <a class="nav-link">Contato</a>
+                                    <div class="dropdown-menu">
+                                        <div class="dropdown-content">
+                                            <a class="dropdown-item" href="contato.html">
+                                                Fale Conosco
+                                            </a>
+                                            <a class="dropdown-item" href="trabalhe-conosco.html">
+                                                Trabalhe Conosco
+                                            </a>
+                                        </div>
+                                    </div>
+                                </li>
                             </ul>
                         </div>
 
