--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 										<a class="nav-link" href="cases.html">Cases</a>
 									</li>
 									<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-										<a class="nav-link" href="av-geo.html">Sistemas</a>
+										<a class="nav-link" href="sistemas.html">Sistemas</a>
 									</li>
 									<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 dropdown">
 											<a class="nav-link">Contato</a>
@@ -250,7 +250,7 @@
 				<div class="servicos-title" >
 					<h2><span class="color-green">Sistema</span></h2>
 				</div>
-				<p>AV-GEO é um software de gerenciamento de projetos
+				<p>sistemas é um software de gerenciamento de projetos
 					<br>compostos por banco de dados desenvolvido exclusivamente
 					<br>pela AVSystemGeo Tecnologia da Informação Ltda.
 				</p>
@@ -306,7 +306,7 @@
 		<footer>
 			<div class="container1 footerContainer">
 				<div class="footer-nav flex flex-around flex-start flex-g-1">
-					<div class="col flex flex-column flex-start flex-g-1">
+					<div class="logo-footer-espacamento col flex flex-column flex-start flex-g-1">
 						<span class="logo-holder">
 							<img src="imgs/logo-avgeo.png" alt="" class="logo-footer">
 						</span>
@@ -335,7 +335,7 @@
 							</a>
 						</div>
 					</div>
-					<div class="col flex flex-column flex-g-1 flex-start">
+					<div class="span-empresa col flex flex-column flex-g-1">
 						<h3 class="col-title">Empresa</h3>
 						<nav class="col-list">
 							<ul>
@@ -346,27 +346,26 @@
 							</ul>
 						</nav>
 					</div>
-					<div class="col flex flex-column flex-g-1 flex-start">
+					<div class="col flex flex-column flex-g-1 ">
 						<h3 class="col-title">Serviço</h3>
 						<nav class="col-list">
 							<ul>
-								<li><a href="av-geo.html">Sistemas</a></li>
+								<li><a href="sistemas.html">Sistemas</a></li>
 								<li><a href="cases.html">Cases</a></li>
 						
 							</ul>
 						</nav>
 					</div>
 
-					<div class="col flex flex-column flex-g-1 flex-start">
+					<div class="span col flex flex-column flex-g-1 ">
 						<h3 class="col-title">Localização</h3>
-						<nav class="col-list">
-							<ul>
+							<ul class="col-list">
 								<li>Rua Brasópolis, 182 - </li>
 								<li>Sala A</li>
 								<li>Floresta - Belo Horizonte</li>
 								<li>MG</li>
 							</ul>
-						</nav>
+						
 					</div>
 					<div class="col flex flex-column flex-g-1 flex-start">
 						<h3 class="col-title">Contato</h3>
@@ -393,7 +392,7 @@
 	<script src="./scripts/script.js"></script>
 	<script src="./scripts/avtron.js"></script>
 	<script src="./scripts/chat.js"></script>
-	<script src="./asdsd.js"></script>
+	<script src="./scripts/politica_de_privacidade.js"></script>
 
 
 </body>
