--- a/trabalhe-conosco.html
+++ b/trabalhe-conosco.html
@@ -248,7 +248,7 @@
                     <h3 class="col-title">Serviço</h3>
                     <nav class="col-list">
                         <ul>
-                            <li><a href="av-geo.html">Sistemas</a></li>
+                            <li><a href="sistemas.html">Sistemas</a></li>
                             <li><a href="cases.html">Cases</a></li>
                     
                         </ul>
@@ -295,5 +295,6 @@
 <script src="./scripts/avtron.js"></script>
 <script src="./scripts/chat.js"></script>
 <script src="./scripts/validardados.js"></script>
+<script src="./scripts/politica_de_privacidade.js"></script>
 
 </html>
