--- a/cases.html
+++ b/cases.html
@@ -46,15 +46,21 @@
                                     <a class="nav-link" href="cases.html">Cases</a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                    <a class="nav-link" href="av-geo.html">Sistemas</a>
+                                    <a class="nav-link" href="sistemas.html">Sistemas</a>
                                 </li>
-								<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 dropdown">
-									<a class="nav-link">Contato</a>
-									<ul class="dropdown-content">
-										<li><a href="contato.html">Contato</a></li>
-										<li><a href="trabalhe-conosco.html">Trabalhe Conosco</a></li>
-									  </ul>
-								</li>
+                                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 dropdown">
+                                    <a class="nav-link">Contato</a>
+                                    <div class="dropdown-menu">
+                                        <div class="dropdown-content">
+                                            <a class="dropdown-item" href="contato.html">
+                                                Fale Conosco
+                                            </a>
+                                            <a class="dropdown-item" href="trabalhe-conosco.html">
+                                                Trabalhe Conosco
+                                            </a>
+                                        </div>
+                                    </div>
+                                </li>
 							</ul>
 						</div>
 						
@@ -84,16 +90,16 @@
         <h1 class="texto-do-cases">UHE Belo Monte</h1>
         <p>Para atender as demandas de gestão do processo de desimpedimento fundiário Urbano, foi implementado uma
             soluções de gestão dos processos que integrasse todas as empresas envolvidas no projeto em uma única
-            plataforma. Foi implantado o AV-GEO para fazer a gestão e controle dos processos de regularização fundiária.
+            plataforma. Foi implantado o sistemas para fazer a gestão e controle dos processos de regularização fundiária.
             Foram cadastrados mais de 5.400 imóveis com mais de 8.000 mil famílias impactadas pela Usina Hidroelétrica
             de Belo Monte no município de Altamira. Foram 11 empresas diferentes atuando em uma única plataforma,
             trabalhando de maneira integrada.
-            Todas as informações foram concentradas no AV-GEO auxiliando os gestores a ter um controle do projeto e
+            Todas as informações foram concentradas no sistemas auxiliando os gestores a ter um controle do projeto e
             acompanhar em tempo real todo o projeto.</p>
     </div>
     <div class="div2" data-aos="fade-left">
         <h1 class="texto-do-cases">Linha de Transmissão CC ±800 kV Xingu / Estreito - BMTE</h1>
-        <p>Para fazer o controle dos processos fundiários do projetos foi, a empresa contratada adotou o AV-GEO para
+        <p>Para fazer o controle dos processos fundiários do projetos foi, a empresa contratada adotou o sistemas para
             fazer a gestão e controle dos processos.Foi controlado mais de 1.535 propriedade
             atingidas totalizando 1.238,98 KM.Foram cadastrados mais de 20 mil arquivos em todo o projeto.</p>
     </div>
@@ -114,7 +120,7 @@
     </div>
     <div class="div4"  data-aos="fade-left">
         <h1 class="texto-do-cases">LT CC 800kV Xingu - Terminal Rio</h1>
-        <p>Hoje controlamos através da plataforma do AV-GEO um total de 3848 propriedade atingidas pelo empreendimento,
+        <p>Hoje controlamos através da plataforma do sistemas um total de 3848 propriedade atingidas pelo empreendimento,
             mais 70mil arquivos cadastrados. Foram cadastrados mais de 4389 proprietário atingidos pelo empreendimento.
             Todos devidamente qualificados. A plataforma auxilia o gestor do empreendimento a obter um controle maior
             sobre o projeto e a
@@ -171,7 +177,7 @@
                 <h3 class="col-title">Serviço</h3>
                 <nav class="col-list">
                     <ul>
-                        <li><a href="av-geo.html">Sistemas</a></li>
+                        <li><a href="sistemas.html">Sistemas</a></li>
                         <li><a href="cases.html">Cases</a></li>
                 
                     </ul>
@@ -218,3 +224,4 @@
 <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
 <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js'></script>
+<script src="./scripts/politica_de_privacidade.js"></script>
