--- a/contato.html
+++ b/contato.html
@@ -51,7 +51,7 @@
                                     <a class="nav-link" href="cases.html">Cases</a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                    <a class="nav-link" href="av-geo.html">Sistemas</a>
+                                    <a class="nav-link" href="sistemas.html">Sistemas</a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 dropdown active">
                                     <a class="nav-link">Contato</a>
@@ -191,7 +191,7 @@
                     <h3 class="col-title">Serviço</h3>
                     <nav class="col-list">
                         <ul>
-                            <li><a href="av-geo.html">Sistemas</a></li>
+                            <li><a href="sistemas.html">Sistemas</a></li>
                             <li><a href="cases.html">Cases</a></li>
 
                         </ul>
@@ -243,3 +243,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
 <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js'></script>
 <script src="./scripts/mapa.js"></script>
+<script src="./scripts/politica_de_privacidade.js"></script>
