--- a/sistemas.html
+++ b/sistemas.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/style-slider.css">
     <link rel="stylesheet" href="./css/style-progess.css">
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./css/av-geo.css">
+    <link rel="stylesheet" href="./css/sistemas.css">
 
 
 </head>
@@ -48,15 +48,21 @@
                                     <a class="nav-link" href="cases.html">Cases</a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
-                                    <a class="nav-link" href="av-geo.html">Sistemas</a>
+                                    <a class="nav-link" href="sistemas.html">Sistemas</a>
                                 </li>
-								<li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 dropdown">
-									<a class="nav-link">Contato</a>
-									<ul class="dropdown-content">
-										<li><a href="contato.html">Contato</a></li>
-										<li><a href="trabalhe-conosco.html">Trabalhe Conosco</a></li>
-									  </ul>
-								</li>
+                                <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 dropdown">
+                                    <a class="nav-link">Contato</a>
+                                    <div class="dropdown-menu">
+                                        <div class="dropdown-content">
+                                            <a class="dropdown-item" href="contato.html">
+                                                Fale Conosco
+                                            </a>
+                                            <a class="dropdown-item" href="trabalhe-conosco.html">
+                                                Trabalhe Conosco
+                                            </a>
+                                        </div>
+                                    </div>
+                                </li>
 							</ul>
 						</div>
 						
@@ -80,7 +86,7 @@
 
     <div class="container-fluid">
         <div class="div1 arrumar-texto">
-            <p>AV-GEO é um software de gerenciamento de projetos compostos por banco de dados desenvolvido
+            <p> O AVGEO é um software de gerenciamento de projetos compostos por banco de dados desenvolvido
                 exclusivamente pela AVSystemGeo Tecnologia da Informação Ltda, em que a evolução dos trabalhos de campo
                 e de
                 escritório podem ser analisados diariamente, assim como o avanço e a emissão de relatórios referentes
@@ -152,7 +158,7 @@
                     <h3 class="col-title">Serviço</h3>
                     <nav class="col-list">
                         <ul>
-                            <li><a href="av-geo.html">Sistemas</a></li>
+                            <li><a href="sistemas.html">Sistemas</a></li>
                             <li><a href="cases.html">Cases</a></li>
                     
                         </ul>
@@ -194,3 +200,4 @@
 <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
 <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js'></script>
+<script src="./scripts/politica_de_privacidade.js"></script>
