alteração trabalhe conosco dia 07/03/2023

--- a/trabalhe-conosco.html
+++ b/trabalhe-conosco.html
@@ -74,12 +74,13 @@
         <h6>Venha fazer parte da equipe AVSystemGEO.</h6>
 
     </div>
+  <div class="arreda">
     <fieldset>
 
         <div class="container-parte-um">
             <form action="#" method="post" name="dados" class="classe">
                 <table>
-                    <h1> <strong>Dados Pessoais</strong></h1><br>
+                    <h1> <strong>Dados Pessoais</strong></h1>
                     <tr>
 
                         <td><label>Nome completo: </label></td>
@@ -116,8 +117,12 @@
                 <br>
 
                 <table>
-                    <h1> <strong> Grau de Graduação </strong></h1><br>
-
+                    <tr>
+                        <td> <h1> <strong> Grau de Graduação </strong></h1></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                    </tr>
                     <tr>
 
                         <td><label>Escolaridade: </label></td>
@@ -152,8 +157,10 @@
                 <br>
                 <br>
                 <table>
-                    <h1> <strong> Experiência profissional </strong></h1><br>
-
+                    <tr>
+                        <td><h1> <strong> Experiência profissional </h1></strong></td>
+                    </tr>
+                    <tr><td></td></tr>
                     <tr>
 
                         <td><label>Última empresa em que trabalhou ou trabalha: </label></td>
@@ -195,7 +202,7 @@
 
         </form>
     </fieldset>
-
+</div>
     <footer>
         <div class="container1 footerContainer">
             <div class="footer-nav flex flex-around flex-start flex-g-1">
