--- a/trabalhe-conosco.html
+++ b/trabalhe-conosco.html
@@ -14,7 +14,12 @@
     <link rel="stylesheet" href="./css/trabalhe.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
+<style>
+    .arreda{
+    margin-left: 5%;
 
+}
+</style>
 <body>
 
 
