alteração trabalhe conosco teste

--- a/contato.html
+++ b/contato.html
@@ -84,7 +84,7 @@
 </section>
 
 <section class="classe">
-  <form id="form-contato" method="post" action="" onsubmit="return validF(0,'form-contato');">
+  <form id="form-contato" method="post"  action="envio.php" >
     <!--<form  class='col-xs-10 col-sm-8 col-md-8 col-xs-offset-1 col-sm-offset-2 col-md-offset-2' name='StaticForm_59556ae7c299c' method='POST' action='/contato/save-form' enctype='multipart/form-data'>-->
               <div  >
                   <label >Nome</label> 
@@ -117,7 +117,7 @@
               </div>
           <div>
           
-            <button  type="submit" class="btn btn-outline botao" ><a class="maoe" href="mailto:comercial@avsystemgeo.com.br, suporte@avsystemgeo.com.br,?subject=Assunto&body=Boa tarde," >Enviar</a></button>
+            <button  type="submit" class="btn btn-outline botao" >Enviar</button>
         </div>
    
              </form>
