--- a/contato.html
+++ b/contato.html
@@ -41,11 +41,10 @@
                                     <a class="nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                    <a class="nav-link" href="#quem-somos">Quem Somos</a>
+                                    <a class="nav-link" href="index.html">Quem Somos</a>
                                 </li>
-
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                    <a class="nav-link" href="#clientes">Clientes</a>
+                                    <a class="nav-link" href="index.html">Clientes</a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link" href="cases.html">Cases</a>
