--- a/trabalhe-conosco.html
+++ b/trabalhe-conosco.html
@@ -49,7 +49,7 @@
                                     <a class="nav-link" href="cases.html">Cases</a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                    <a class="nav-link" href="index.html">Sistemas</a>
+                                    <a class="nav-link" href="sistemas.html">Sistemas</a>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 dropdown active">
                                     <a class="nav-link">Contato</a>
