--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 						<div class="background-content">
 						
 							   <div id="methodlearn">
-								  <div class="content">Caso tenha uma dúvida sobre o sistema, acesse nosso portal de <a href="https://avsystemgeo.movidesk.com/">suporte</a>  😉 😉 😉   </div>
-								  <div class="content">Para saber mais sobre o sistema AVGEO, basta clicar nesse link, e você será redirecionado para a parte de   <a href="av-geo.html"> sistemas </a>😉 😁 </div>
-								  <div class="content">O nosso email comercial está disponivel para você entrar em contato conosco 😁 <a href="mailto:comercial@avsystemgeo.com.br, ?subject=Assunto&body=Boa tarde,"style = "color:blue;">comercial@avsystemgeo.com.br</a></div>
+								  <div class="content">Caso tenha uma dúvida sobre o sistema, acesse nosso portal de <a href="https://avsystemgeo.movidesk.com/" style = "color:#337029;">suporte</a>  😉 😉 😉   </div>
+								  <div class="content">Para saber mais sobre o sistema AVGEO, basta clicar nesse link, e você será redirecionado para a parte de   <a href="av-geo.html" style = "color:#337029;"> sistemas </a>😉 😁 </div>
+								  <div class="content">O nosso email comercial está disponivel para você entrar em contato conosco 😁 <a href="mailto:comercial@avsystemgeo.com.br, ?subject=Assunto&body=Boa tarde,"style = "color:#337029;">comercial@avsystemgeo.com.br</a></div>
 								 
 							   </div>
 							</div>
