--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<body>
 		<!--BOT-->
-		<!--<button class="chatbox-open">
+		<button class="chatbox-open">
 			<div class="robo-container">
 				<div class="robo-chat-container">
 					<div class="talk-bubble tri-right border-bubble btm-right-in">
@@ -66,7 +66,7 @@
 					<i class="fa fa-paper-plane" aria-hidden="true"></i>
 				</aside>
 			</footer>
-		</section>-->
+		</section>
 		<!--FIM-->
 
 		<!--BARRA DE NAVEGAÇÃO-->
