--- a/trabalhe-conosco.html
+++ b/trabalhe-conosco.html
@@ -157,9 +157,10 @@
                     <div class="col-3">
                         <label> Área de interesse </label>
                         <select class="form-control teste" id="genero" name="genero" required>
-                            <option value="" selected="selected">Administrativo</option>
-                            <option value="Seinen">Desenvolvimento de Software</option>
-                            <option value="shounen">Infraestrutura</option>
+                            <option value="">Área de interesse</option>
+                            <option value="Administrativo">Administrativo</option>
+                            <option value="Desenvolvimentodesoftware">Desenvolvimento de Software</option>
+                            <option value="Infraestrutura">Infraestrutura</option>
                         </select>
                     </div>
                 </div>
